# esp-iot-solution

examples/factory/c61eco2_factory/: CMakeLists.txt  partitions_singleapp_4m.csv  sdkconfig.defaults
examples/factory/c61eco2_factory/bootloader_components/bootloader_uf2/: Kconfig  hooks.c
examples/factory/c61eco2_factory/components/esp-qa__wifi-cmd/: .component_hash  CMakeLists.txt  Kconfig  idf_component.yml
examples/factory/c61eco2_factory/components/esp-qa__wifi-cmd/examples/test_app/main/: main.c
examples/factory/c61eco2_factory/components/esp-qa__wifi-cmd/include/: wifi_cmd.h
examples/factory/c61eco2_factory/components/esp-qa__wifi-cmd/src/: ap_cmd.c  sta_cmd.c  unsupported_wifi_cmd.c  wifi_he_debug_cmd.c  wifi_itwt_cmd.c  wifi_proto_cbw_cmd.c  wifi_txpower.c
examples/factory/c61eco2_factory/iperf_bin/: readme.md  出厂固件使用方法.txt
examples/factory/c61eco2_factory/iperf_bin/iperf_factory/main/: CMakeLists.txt  iperf_example_main.c
examples/factory/c61eco2_factory/iperf_bin/iperf_simple_test/: CMakeLists.txt
examples/factory/c61eco2_factory/iperf_bin/iperf_simple_test/components/esp-qa__wifi-cmd/: README.md
examples/factory/c61eco2_factory/iperf_bin/iperf_simple_test/components/esp-qa__wifi-cmd/src/: wifi_band_cmd.c  wifi_cmd.c  wifi_common.c  wifi_handler.c  wifi_init.c  wifi_stats_cmd.c
examples/factory/c61eco2_factory/iperf_bin/iperf_simple_test/main/: idf_component.yml  iperf_example_main.c
examples/factory/c61eco2_factory/main/: CMakeLists.txt  factory_main.c
examples/factory/c61eco2_factory/utils/: redirect.sh
(+6 files in other folders)
